Fix extra space below sections

--- a/styles/index.css
+++ b/styles/index.css
@@ -171,7 +171,7 @@ header .content {
 .scroller {
     position: relative;
     overflow-y: scroll;
-    height: calc(100vh - 70px);
+    height: 100vh;
     scroll-snap-type: y mandatory;
 }
 
